--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,14 @@
 spring.application.name=libraryManagement-neo4j
 
+server.port=9095
+
 spring.neo4j.uri=bolt://localhost:7687
 spring.neo4j.authentication.username=neo4j
 spring.neo4j.authentication.password=root1234
-spring.data.neo4j.database=library management
+# spring.data.neo4j.database=library management
+
+
+# Just ignore this warning or suppress it by setting this log level to ERROR
+# logging.level.org.springframework.security.config.annotation.authentication.configuration.InitializeUserDetailsBeanManagerConfigurer=ERROR
+
+logging.level.root=INFO
