--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,11 @@ server.port=9095
 
 spring.neo4j.uri=bolt://localhost:7687
 spring.neo4j.authentication.username=neo4j
-spring.neo4j.authentication.password=root1234
-# spring.data.neo4j.database=library management
+spring.neo4j.authentication.password=root12345
+# spring.data.neo4j.database=librarymanagement
+
+# Specify the database name explicitly
+spring.neo4j.database=librarymanagement
 
 
 # Just ignore this warning or suppress it by setting this log level to ERROR
